--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.inputContainer{
+    @apply flex flex-col gap-3
+}
+
+.authInput{
+    @apply h-[50px] border border-grayBlue rounded-2xl pl-4
+}
+
+.authLabel{
+    @apply text-black001 font-semibold 
+}
+
+.authSubmitInput{
+    @apply bg-redbold text-white w-full py-3 rounded-xl mt-2 cursor-pointer
+}
